[package]
name = "udp_server"
version = "0.1.0"
authors = ["TimaGhostov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
postgres = { version = "0.18", features = ["with-chrono-0_4"] }
